tests/golden/invalid/obj-02.rego
package fregot.tests.invalid.obj_02

inconsistent = {
  "k": "hi",
  "k": "bye",
}
